@@ -28,11 +28,10 @@
      *
      * @param   peer.URL u
      * @param   &array attr
-     * @param   &int port
      * @return  bool
      * @throws  lang.IllegalArgumentException
      */
-    protected function _supports($u, $attr) {
+    protected function _supports($u, &$attr) {
       switch (strtolower($u->getScheme())) {
         case 'imap': 
           $attr['proto']= 'imap'; 
